# turbulette

./: .codacy.yml  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .prospector.yml  .pylintrc  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  bump.json  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  pull_request_template.md
.github/workflows/: build-docs.yml  cd.yml  ci.yml  codeql-analysis.yml  coverage.yml  preview-docs.yml  publish.yml  test.yml
docs/: changelogs.md  index.md
docs/css/: custom.css  termynal.css
docs/en/: mkdocs.yml
docs/en/docs/: changelogs.md  faq.md  index.md
docs/js/: custom.js  termynal.js
docs/reference/: asgi.md  conf.md  custom_scalars.md  error_codes.md  route_handlers.md  test.md
docs/reference/apps/: app_management.md
docs/reference/apps/auth/: core.md  decorators.md  graphql.md  models.md  policy.md  pyd_models.md  settings.md  utils.md
docs/reference/database/: database.md
docs/reference/management/: alembic_env.md  cli.md
docs/reference/middlewares/: csrf.md
docs/reference/validation/: decorators.md  pyd_model.md
docs/user_guide/: alembic.md  auth.md  database.md  error_handling.md  graphql.md  index.md  policy.md  project_apps.md  settings.md  validation.md
gino_backend/: __init__.py  alembic_env.py  backend.py  exceptions.py  model.py
gino_backend/management/commands/: cli.py
scripts/: install-poetry.sh
tests/: .env.example  alembic.ini  app.py  policies.json  routing.py  settings.py  settings_csrf.py  settings_no_apps.py  settings_no_env.py  settings_wrong_env.py
tests/alembic/: env.py  script.py.mako
tests/app_1/: app.py  models.py  pyd_models.py
tests/app_1/graphql/: user.graphql
tests/app_1/management/commands/: cmd.py
tests/app_1/migrations/: [08-13-2020--11-58]__create_app_1_branch.py  [08-13-2020--11-59]__initial.py  [08-16-2020--03-10]__add_custom_user.py  [08-17-2020--03-06]__add_book_model.py  [09-11-2020--00-25]__initial_revision.py  [09-11-2020--16-02]__add_comic_model.py  [09-11-2020--23-22]__rename_permission_role_to_role.py  [09-12-2020--15-42]__initial_revision.py  [09-13-2020--15-45]__initial_revision.py  [09-15-2020--11-18]__initial_revision.py  [09-19-2020--22-14]__add_nb_borrowings.py  [09-20-2020--11-05]__add_price_bought.py
tests/app_1/resolvers/: user.py
tests/app_1/tests/: test_auth.py
tests/app_2/: models.py
tests/app_2/migrations/: [08-13-2020--11-58]__create_app_2_branch.py  [08-13-2020--12-01]__initial.py
tests/base_tests/: conftest.py  test_app.py  test_asgi.py  test_registry.py  test_setup.py
tests/turbulette_tests/: conftest.py  constants.py  queries.py  test_auth.py  test_csrf.py  test_models.py  test_permissions.py  test_policy.py  test_pydantic.py  test_scalars.py
tests/turbulette_tests/cli/: conftest.py  test_cli.py
tests/turbulette_tests/setup/: conftest.py  test_app.py  test_asgi.py  test_registry.py  test_setup.py
turbulette/: __init__.py  asgi.py  cache.py  db_backend.py  errors.py  exceptions.py  extensions.py  main.py  routes.py  utils.py
turbulette/alembic/: env.py
turbulette/apps/: __init__.py  app.py  config.py  constants.py  exceptions.py  registry.py
turbulette/apps/auth/: __init__.py  core.py  decorators.py  directives.py  exceptions.py  loaders.py  models.py  permissions.py  policy.py  pyd_models.py  settings.py  type.py  utils.py
turbulette/apps/auth/graphql/queries/: auth.graphql
turbulette/apps/auth/graphql/types/: auth.graphql
turbulette/apps/auth/policy/: __init__.py  base.py  constants.py  policy.py
turbulette/apps/auth/resolvers/: policy.py
turbulette/apps/auth/resolvers/queries/: token.py
turbulette/apps/base/: __init__.py  settings.py
turbulette/apps/base/graphql/: base_schema.graphql
turbulette/apps/base/graphql/mutations/: mutation_type.graphql
turbulette/apps/base/graphql/queries/: query_type.graphql
turbulette/apps/base/graphql/scalars/: scalars.graphql
turbulette/apps/base/resolvers/: root_types.py
turbulette/apps/base/resolvers/mutations/: mutation_type.py
turbulette/apps/base/resolvers/queries/: query_type.py
turbulette/apps/base/resolvers/scalars/: scalar_types.py
turbulette/asgi/: exceptions.py  mounts.py
turbulette/conf/: __init__.py  constants.py  exceptions.py  utils.py
turbulette/core/: cache.py  errors.py  exceptions.py  extensions.py  utils.py
turbulette/core/management/: cli.py
turbulette/core/management/templates/project/: .env  alembic.ini  settings.py
turbulette/core/management/templates/project/alembic/: env.py
turbulette/core/validation/: __init__.py  decorators.py  exceptions.py  pyd_model.py
turbulette/db/: __init__.py  database.py  exceptions.py
turbulette/db_backend/: core.py  gino.py
turbulette/management/: alembic_env.py  cli.py
turbulette/management/templates/project/: .env  app.py  settings.py
turbulette/management/templates/project/alembic/: env.py
turbulette/middleware/: csrf.py
turbulette/test/: pytest_plugin.py  tester.py
turbulette/type/: __init__.py  definition.py
turbulette/utils/: crypto.py  normalize.py  regex.py
turbulette/validation/: __init__.py  decorators.py  exceptions.py  pyd_model.py
